Removing Alacritty from onstart

--- a/.i3/config
+++ b/.i3/config
@@ -203,7 +203,11 @@ bar {
         position    top
 }
 
-exec alacritty &
+###############
+#Custom Macros#
+###############
+
+
 exec /home/harry/.screenlayout/defaultLayout.sh &
 exec dunst &
 exec /home/harry/scripts/wallPaperScript.sh &
