--- a/.i3/config
+++ b/.i3/config
@@ -50,7 +50,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -207,6 +207,7 @@ bar {
 #Custom Macros#
 ###############
 
-
 exec /home/harry/.screenlayout/defaultLayout.sh &
 exec dunst &
+exec alacritty &
+exec feh --bg-fill --randomize ~/Wallpapers/* &
