Updating set-bg to a script instead of function and adding to path. Calling set-bg as part of i3 Init

--- a/.i3/config
+++ b/.i3/config
@@ -51,7 +51,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec alacritty
-
+bindsym $mod+Shift+f exec firefox
 # kill focused window
 bindsym $mod+Shift+q kill
 
@@ -206,8 +206,6 @@ bar {
 ###############
 #Custom Macros#
 ###############
-
 exec /home/harry/.screenlayout/defaultLayout.sh &
 exec dunst &
-exec alacritty &
-exec feh --bg-fill --randomize ~/Wallpapers/* &
+exec /home/harry/scripts/set-bg
