--- a/.i3/config
+++ b/.i3/config
@@ -198,14 +198,15 @@ bindsym $mod+Shift+minus gaps horizontal current minus $gapChange; gaps vertical
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-        position    top
-}
+#bar {
+#        status_command i3status
+#        position    top
+#}
 
 ###############
 #Custom Macros#
 ###############
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec /home/harry/.screenlayout/defaultLayout.sh &
 exec dunst &
 exec /home/harry/scripts/set-bg
